redis (2:2.8.19-4) UNRELEASED; urgency=medium

  * wrap-and-sort entries.

 -- Chris Lamb <lamby@debian.org>  Thu, 12 Feb 2015 23:32:09 +0000

redis (2:2.8.19-3) unstable; urgency=medium

  * Add DEP-8 smoke test.

 -- Chris Lamb <lamby@debian.org>  Sun, 08 Feb 2015 19:19:42 +0000

redis (2:2.8.19-2) unstable; urgency=low

  * Re-enable testsuite.
    - Add tcl to Build-Depends.
  * Add --oknodo to initscript "start" action to ensure correct return code if
    is already running.
  * Use the latest debian/changelog date in 05-reproducible-build.diff.

 -- Chris Lamb <lamby@debian.org>  Tue, 27 Jan 2015 04:48:25 +0000

redis (2:2.8.19-1) unstable; urgency=medium

  * New upstream release.

 -- Chris Lamb <lamby@debian.org>  Tue, 30 Dec 2014 10:06:28 +0000

redis (2:2.8.18-1) unstable; urgency=low

  * New upstream release.
    - Sync debian/redis.conf.
  * Attempt to make build reproducible by dropping timestamp/uname name from
    release.h.
  * Bump Standards-Version to 3.9.6.

 -- Chris Lamb <lamby@debian.org>  Thu, 11 Dec 2014 12:19:43 +0000

redis (2:2.8.17-1) unstable; urgency=medium

  * New upstream release.

 -- Chris Lamb <lamby@debian.org>  Thu, 09 Oct 2014 11:47:32 +0100

redis (2:2.8.14-1) unstable; urgency=low

  * New upstream release.
  * Guillaume Delacour:
    - Use dpkg-buildflags CFLAGS, CPPFLAGS (patch upstream Makefile) and
      LDFLAGS, also use pie and relro via DEB_BUILD_MAINT_OPTIONS
    - Call make V=1 to show gcc command lines (blhc) and enable parallel build
  * Sync debian/redis.conf and redis.conf.
  * Refresh 02-fix-ftbfs-on-kfreebsd patch.

 -- Chris Lamb <lamby@debian.org>  Fri, 05 Sep 2014 13:54:51 +0100

redis (2:2.8.13-3) unstable; urgency=low

  * Correct permissions of our /var directories by chowning them recursively.
    This is necessary, at least temporarily, as systemd users were previously
    running the daemon as root causing the files in those dirs to be owned by